--- a/views/index.pug
+++ b/views/index.pug
@@ -22,16 +22,18 @@ html
                     li Обработка файлов может занимать продолжительное время.
         row
             column(cols='1')
-            column(cols='3')
+            column(cols='10')
                 h4 Загрузите подходящие FASTA, FASTQ или SAM файлы:
                 #dropzone
-            column(cols='2')
+        row
+            column(cols='1')
+            column(cols='4')
                 h4 Ваши файлы:
                     span(style="color:white") #
                     a(href="/clear")
                         i(class="fa fa-trash")
                 #files
-            column(cols='5')
+            column(cols='6')
                 h4 Результат:
                 #label
                 img#preview(src='/img/blank.png')
